--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/howler": "^2.2.12",
     "@types/node": "^22.7.5",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "node-web-audio-api": "^0.21.3",
     "speaker": "^0.5.5",
     "wav-decoder": "^1.3.0"
