integrated google login and upgraded microsoft login

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@azure/msal-browser": "^3.26.1",
     "@azure/msal-react": "^2.1.1",
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
